--- a/stl/architech.css
+++ b/stl/architech.css
@@ -109,6 +109,52 @@ main > section{
 #list{
     font-weight:500;
 }
+/* some fact  style*/
+
+.fact-description{
+    max-width: 530px;
+}
+
+.fact-card{
+    border: 1px solid #FF900E ;
+    width:240px;
+    height:240px;
+    border-radius: 10px;
+    align-items:center;
+    justify-content: center;
+    text-align: center; 
+}
+.fact-number{
+    font-size:2.8rem;
+    font-weight:500;
+    margin-top:5px;
+    margin-bottom:8px;
+}
+.fact-name{
+    font-size:1.25 rem;
+    font-weight: 500;
+    margin-top:8px;   
+}
+ .fact-container{
+    display:grid;
+    grid-template-columns: repeat(4,1fr) ;
+
+ }
+
+ /* sponsor related style*/
+ .sponsor-info{
+    max-width: 530px;
+    margin:50px auto;
+    text-align: center;
+
+ }
+ .sponsor-companies{
+    display:grid;
+    grid-template-columns: repeat(5,1fr);
+ }
+.sponsor-companies img{
+    filter:grayscale(100%);
+}
 
 
 /* responsive media query*/
@@ -116,11 +162,15 @@ main > section{
     .navbar, .nav-link, .teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .fact-container, .sponsor-companies{
         grid-template-columns: repeat(1,1fr);
     } 
     .our-features{
         margin: 25px;
+    }
+    .fact-container, .sponsor-companies{
+        justify-items:center;
+        gap:20px;
     }
 
     
@@ -133,6 +183,11 @@ main > section{
     }
     .our-features{
         margin:40px auto;
+    }
+    .sponsor-companies, .fact-container{
+        grid-template-columns: repeat(2,1fr);
+        gap:50px;
+        justify-items: center;
     }
 
     
