--- a/stl/architech.css
+++ b/stl/architech.css
@@ -1,14 +1,14 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .work-sans-font {
-  font-family: "Work Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400 ;
-  font-style: normal;
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
+
 /* shared style*/
-.btn-primary{
+.btn-primary {
     background-color: #FF900E;
     color: white;
     padding: 20px 25px;
@@ -17,178 +17,300 @@
     border-radius: 8px;
     border: none;
 }
-main{
-    max-width:1440px;
-    margin:0 auto;
+
+main {
+    max-width: 1260px;
+    margin: 0 auto;
 }
-main > section{
+
+main>section {
     margin-top: 130px;
 }
-.display-flex{
-    display:flex;
-    
+
+.display-flex {
+    display: flex;
+
 }
-.text-primary{
-    color:#FF900E;
+
+.text-primary {
+    color: #FF900E;
 }
+
 /*dark 02*/
-.text-gray{
-    color:#424242;
+.text-gray {
+    color: #424242;
 }
+
 /*dark03*/
-.text-lightgray{
+.text-lightgray {
     color: #727272;
 }
-.bg-light{
+
+.bg-light {
     background-color: rgba(255, 144, 14, 0.1);
 }
 
+.feature-titel {
+    font-size: 2.8 rem;
+    font-weight: 700;
+}
 
 /* header style*/
 
 /* navbar style*/
 
-.navbar{
-    justify-content:space-between;
+.navbar {
+    justify-content: space-between;
     align-items: center;
-    
+
 }
-.brand{
+
+.brand {
     font-weight: 700;
     font-size: 3rem;
 }
 
-.nav-item{
-    list-style:none;
-    margin-right:25px;
+.nav-item {
+    list-style: none;
+    margin-right: 30px;
 
 }
-.nav-link{
+
+.nav-link {
     text-decoration: none;
-    font-weight:500;
+    font-weight: 500;
 }
 
-.navbar, .banner{
+.navbar,
+.banner {
     max-width: 1440px;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 /* banner related style*/
-.banner-content{
-    max-width:855px;
+.banner-content {
+    max-width: 850px;
     margin: 0 auto;
-    text-align:center;
-    margin-bottom: 3rem;
+    text-align: center;
+    margin-bottom: 50px;
 }
-.banner-titel{
+
+.banner-titel {
     font-weight: 700;
     font-size: 4rem;
 }
-.banner-img{
+
+.banner-img {
     width: 100%;
 }
 
 /*team and feature*/
-.teams{
+.teams {
     align-items: center;
 
 }
-.team-img-container{
-    display:grid;
-    grid-template-columns: repeat(2,1fr);
-    gap:25px;
-} 
-.our-features{
+
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features {
     margin-left: 130px;
-    max-width:520px;
-}
-.feature-titel{
-    font-size: 2.8 rem;
-    font-weight:700;
-}
-#list{
-    font-weight:500;
-}
-/* some fact  style*/
-
-.fact-description{
     max-width: 530px;
 }
 
-.fact-card{
-    border: 1px solid #FF900E ;
-    width:240px;
-    height:240px;
-    border-radius: 10px;
-    align-items:center;
-    justify-content: center;
-    text-align: center; 
-}
-.fact-number{
-    font-size:2.8rem;
-    font-weight:500;
-    margin-top:5px;
-    margin-bottom:8px;
-}
-.fact-name{
-    font-size:1.25 rem;
+
+#list {
     font-weight: 500;
-    margin-top:8px;   
 }
- .fact-container{
-    display:grid;
-    grid-template-columns: repeat(4,1fr) ;
 
- }
+/*feature related style*/
+.features {
+    gap: 140px;
+}
 
- /* sponsor related style*/
- .sponsor-info{
-    max-width: 530px;
-    margin:50px auto;
+#feature-section-titel {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+
+}
+
+.feature-card {
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+
+}
+
+.feature-card .feature-titel {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+
+}
+
+#experience-badge {
+    padding: 45px 42px;
+    margin-left: -100px;
+    margin-top: -100px;
+
+
+
+}
+
+.experience {
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
+#experience-year {
+    font-size: 4rem;
+    font-weight: 700;
+
+}
+
+.featured-architect {
+    width: 100%;
+}
+
+
+
+/* some fact  style*/
+.fact-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+}
+
+
+
+.fact-card {
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name {
+    font-size: 1.25 rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description {
+    max-width: 540px;
+}
+
+
+
+/* sponsor related style*/
+.sponsor-info {
+    max-width: 540px;
+    margin: 50px auto;
     text-align: center;
 
- }
- .sponsor-companies{
-    display:grid;
-    grid-template-columns: repeat(5,1fr);
- }
-.sponsor-companies img{
-    filter:grayscale(100%);
+}
+
+.sponsor-companies {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img {
+    filter: grayscale(100%);
+}
+
+
+.footer-bg {
+    background-color: rgba(255, 244, 231, 1);
+    border-radius: 10px;
+    padding: 60px;
+    margin-top: 130px;
+    margin-bottom: 216px;
+    text-align: center;
+
+    
+    
 }
 
 
 /* responsive media query*/
-@media screen and (max-width:576px){
-    .navbar, .nav-link, .teams{
+@media screen and (max-width:576px) {
+
+    .navbar,
+    .nav-link,
+    .teams,
+    .features {
         flex-direction: column;
     }
-    .team-img-container, .fact-container, .sponsor-companies{
-        grid-template-columns: repeat(1,1fr);
-    } 
-    .our-features{
-        margin: 25px;
-    }
-    .fact-container, .sponsor-companies{
-        justify-items:center;
-        gap:20px;
+
+    .team-img-container,
+    .fact-container,
+    .sponsor-companies {
+        grid-template-columns: repeat(1, 1fr);
     }
 
-    
+    .our-features {
+        margin-left: 20px;
+    }
+
+    .fact-container {
+        justify-items: center;
+        gap: 24px;
+    }
+
+    .sponsor-companies {
+        justify-items: center;
+        gap: 50px;
+    }
+
+    #experience-badge {
+        margin-top: 20px;
+
+        margin-left: auto;
+    }
+
+
 }
 
 /*medium size device*/
-@media screen and (min-width:576px)and (max-width:992){
-    .teams{
+@media screen and (min-width:576px)and (max-width:992) {
+
+    .teams,
+    .features {
         flex-direction: column;
     }
-    .our-features{
-        margin:40px auto;
+
+    .our-features {
+        margin: 50px auto;
     }
-    .sponsor-companies, .fact-container{
-        grid-template-columns: repeat(2,1fr);
-        gap:50px;
+
+    .sponsor-companies,
+    .fact-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
         justify-items: center;
     }
 
-    
+    #experience-badge {
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+
 }
